@@ -29,6 +29,14 @@ Feature: Table
   Scenario: Retrieve data from a table using the row header
     When I retrieve a table element
     Then the data for row "Data3" should be "Data3" and "Data4"
+    
+  Scenario: Retrieve data from a table using a column header
+    When I retrieve a table element
+    Then the data for column "Data2" and row "2" should be "Data4"
+    
+  Scenario: Retrieve data from a table using both headers
+    When I retrieve a table element
+    Then the data for row "Data3" and column "Data2" should be "Data4"
 
   Scenario Outline: Locating table cells on the Page
     When I retrieve a table element by "<search_by>"
