@@ -6,10 +6,12 @@ module PageObject
 
         #
         # Return the PageObject::Elements::TableCell for the index provided.  Index
-        # is zero based.
+        # is zero based.  If the index provided is a String then it
+        # will be matched with the text from the columns in the first row.
         #
         def [](idx)
           els = table_cells
+          idx = find_index_by_title(idx) if idx.kind_of?(String)
           Object::PageObject::Elements::TableCell.new(els[idx], :platform => :selenium_webdriver)
         end
 
@@ -21,6 +23,12 @@ module PageObject
         end
 
         private
+
+        def find_index_by_title(title)
+          table = parent
+          table = table.parent if parent.element.tag_name == 'tbody'
+          table[0].find_index {|column| column.text == title}
+        end
 
         def table_cells
           element.find_elements(:xpath, child_xpath)
