@@ -4,7 +4,8 @@
   * Added when_not_present method to Element
   * Added default override for page level waits - PageObject.default_page_wait
   * Added default override for element level waits - PageObject.default_element_wait
-  * Added the ability to find a TableRow by providing a String to the [] method
+  * Added the ability to find a TableRow by providing a String to the [] method from Table
+  * Added the ability to find a TableCell by providing a String to the [] method from TableRow
   * Updated to use watir-webdriver 0.5.8
 * Fixes
   * Improved logic around selecting options from select lists
